style/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    border: 0.5px solid red;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 15px;
}
body{
    
}
header{
    position: fixed;
    width: 100%;
    background-color: white;
    height: 80px;
}
nav{
    display: flex;
    padding: 10px;
    margin: 4px;
}
ul{
    display: flex;
    margin-left: auto;
    display: none;
    background-color: white;
}
li{
    margin: 10px;
    text-decoration: none;
    list-style: none;
}
li a{
    text-decoration: none;
    color: black;
    font-size: 22px;
}
.menu{
    margin-left: auto;
    margin-top: -5px;
    margin-bottom: 10px;
    font-size: 38px;
    padding: 7px 1px;
}
#company-logo-div{
    margin: 10px;
}
#company-logo-img{
    width: 45px;
}
#toggle{
    margin-left: auto;
    display: none ;
}
#toggle:checked + ul{
    display: flex;
    top: 78px;
    flex-direction: column;
    left: 0;
    position: absolute;
    width: -webkit-fill-available;
    text-align: center

}
/* showcase section */
#showcase{
    padding-top: 99px;
    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../image/header-background-image.jpg);
    background-size: cover;
    min-height: 400px;
    margin-bottom: 110px;
}
#showcase h1{
    margin: 40px 10px;
    color: white;
    text-align: center;
    font-size: 40px;
    text-transform: capitalize;
}
/* about section */
#about{
    min-height: 300px;
    background-size: cover;
    margin-bottom: 110px;
}
.about-title{
    border-radius: 9px;
    background-color: white;
    margin: auto 32px;
    box-shadow: rgba(99, 99, 99, 0.4) 0 2px 8px 0;
}
.about-title img{
    width: 165px;
    border-radius: 50%;
    display: block;
    margin: 23px auto;
}
.about-title p {
    margin-top:20px ;
    padding-left: 13px;
}
#about h2 span{
    text-align: center;
    font-size: 30px;
    border-bottom: 0.5px solid darkblue;
    width: auto;
}
#about h2{
    padding-top: 10px;
    text-align: center;
}
/* project */
#project{
    margin-bottom: 110px;
}
.project-description{
    margin: 30px 32px;
    box-shadow: rgba(99, 99, 99, 0.4) 0 2px 8px 0;
    box-sizing: border-box;
    padding: 10px;
    border-radius: 9px;
}
#project h2 span{
    text-align: center;
    font-size: 30px;
    border-bottom: 0.5px solid darkblue;
    /* width: auto; */
}
.btn-wrapper{
    margin: auto;
    display: block;
}
.btn-wrapper a {
    width: 132px;
    margin: auto;
    display: block;
}
.project-description button{
    border-radius: 2px;
    padding: 0 8px;
    height: 24px;
    border: none;
    font-size: 13px;
    min-width: 132px;
    color: #ffffff;
    background-color: #0060df;
    
    
}
#project h2{
    text-align: center;
    margin: 27px auto;
}
#project h3{
    text-align: center;
    padding-top: 7px;
    padding-bottom: 9px;
    font-size: 24px;

}
#project p{
    text-align: center;
    padding-top: 7px;
    padding-bottom: 25px;
    font-size: 21px;

}
.project-img img{
    display: block;
    height: 100%;
    width: 100%;
}
.project-img{
    height: 261px;
}
/* contact */
.contact-img img{
    width: 45px;
    height: 100%;
    display: block;
    margin: auto;
}
#contact{
    display: grid;
    grid-template-columns: auto auto auto;
    justify-content: space-evenly;
    grid-row-gap: 17px;
}
.contact-img{
    margin: 7px;
    cursor: pointer;
    height: 51px;
}
#contact h2{
    text-align: center;
    margin: 27px auto;
    grid-column: 1/4;
}
#contact h2 span{
    font-size: 30px;
    border-bottom: 1px solid darkblue;
}
.contact-details{
    grid-column: 1/4;
    white-space: pre-line;
    padding: 11px;
}
.contact-message{
    grid-column: 1/4;
}
form{
    display: grid;
    grid-template-columns: auto;
}
form input{
    width: 100%;
    height: 43px;
    margin-left: -2px
}
form input[type="submit"]{
    border-radius: 2px;
    padding: 0 8px;
    height: 24px;
    border: none;
    font-size: 13px;
    min-width: 132px;
    color: #ffffff;
    background-color: #0060df;
}
form label{
    margin: 10px;
}
form textarea{
    width: 100%;
    margin-left: -2px;
}
/* footer */
footer{
    text-align: center;
    font-size: 20px;
    margin: 10px auto;
}
/* 

0 2.8px 2.2px rgba(0,0,0,0.034), 0 6.7px 5.3px rgba(0,0,0,0.048), 0 12.5px 10px rgba(0,0,0,0.06), 0 22.3px 17.9px rgba(0,0,0,0.072), 0 41.8px 33.4px rgba(0,0,0,0.086), 0 100px 80px rgba(0,0,0,0.12) */


/* media query */
@media screen and (min-width: 480px){
   .project-description{
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto auto
   }
   .project-name{
    grid-column: 2/3;
   }
   .project-img{
    grid-row: 1/4;
   }
   .btn-wrapper{
    grid-column: 2/3;
    margin-top: 0px
   }
   #showcase{
       min-height: 439px;
   }
}

@media screen and (min-width: 780px){
    .menu{
        display: none;
    }
    ul{
        display: flex;
        margin-top: 8px;
        margin-bottom: 10px;
    }
    form{
        grid-template-columns: auto auto auto;
    }
    #contact-textarea{
        grid-column: 1/4;
    }
    #contact-btn{
        grid-column: 2/3;
    }
    #showcase h1{
        margin: 124px 10px;
    }
}

